--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="card">
     <div class="square">
-      <img src="images/image-qr-code.png" class="img">
+      <img src="images/image-qr-code.png" class="img" alt="front-endQR">
     </div>
   <h3 class="title">Improve your front-end skills by building projects</h3>
 
